--- a/package.json
+++ b/package.json
@@ -9,15 +9,16 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@react-three/drei": "9.88.0",
-    "@react-three/fiber": "8.15.11",
+    "@react-three/drei": "^9.92.7",
+    "@react-three/fiber": "^8.15.12",
     "framer-motion": "10.16.4",
-    "next": "14.0.4",
+    "next": "^14.2.26",
     "nodemailer": "^6.10.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-intersection-observer": "9.5.2",
-    "three": "0.158.0"
+    "three": "^0.159.0",
+    "three-mesh-bvh": "^0.6.8"
   },
   "devDependencies": {
     "@types/node": "20.10.0",
