--- a/package.json
+++ b/package.json
@@ -9,28 +9,28 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@react-three/drei": "^9.122.0",
-    "@react-three/fiber": "8.15.12",
-    "framer-motion": "10.16.4",
-    "next": "^14.2.26",
+    "@react-three/drei": "9.99.0",
+    "@react-three/fiber": "8.15.16",
+    "framer-motion": "11.0.5",
+    "next": "14.1.0",
     "nodemailer": "6.9.9",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-intersection-observer": "9.5.2",
-    "three": "0.159.0",
+    "react-intersection-observer": "9.8.0",
+    "three": "0.161.0",
     "three-mesh-bvh": "0.6.8"
   },
   "devDependencies": {
-    "@types/node": "20.10.0",
+    "@types/node": "20.11.19",
     "@types/nodemailer": "6.4.14",
-    "@types/react": "18.2.39",
-    "@types/react-dom": "18.2.17",
-    "@types/three": "0.158.0",
-    "autoprefixer": "10.4.16",
-    "eslint": "8.54.0",
-    "eslint-config-next": "14.0.4",
-    "postcss": "8.4.31",
-    "tailwindcss": "3.3.5",
+    "@types/react": "18.3.19",
+    "@types/react-dom": "18.2.19",
+    "@types/three": "0.161.2",
+    "autoprefixer": "10.4.17",
+    "eslint": "8.56.0",
+    "eslint-config-next": "14.1.0",
+    "postcss": "8.4.35",
+    "tailwindcss": "3.4.1",
     "typescript": "5.3.2"
   }
 }
